fix: correct broken node-* CSS selectors to fix temperature display and layout misalignment

--- a/less/page-fix.less
+++ b/less/page-fix.less
@@ -925,8 +925,8 @@
 }
 
 /* fix status */
-.node-status-overview>.main fieldset:nth-child(4) .td:nth-child(2),
-.node-status-processes>.main .table .tr .td:nth-child(3) {
+[data-page="admin-status-overview"] .main fieldset:nth-child(4) .td:nth-child(2),
+[data-page="admin-status-processes"] .main .table .tr .td:nth-child(3) {
     white-space: normal;
 }
 
