--- a/less/responsive.less
+++ b/less/responsive.less
@@ -67,7 +67,7 @@
         font-size: small;
     }
 
-    .node-admin-status>.main fieldset li>a {
+    [data-page^="admin-status"] .main fieldset li>a {
         padding: 0.3rem 0.6rem;
     }
 }
@@ -191,7 +191,7 @@
         margin: 0;
     }
 
-    .node-main-login>.main .cbi-value-title {
+    .login-page .cbi-value-title {
         text-align: left;
     }
 
@@ -474,11 +474,7 @@
     }
 
     // Login page adjustments
-    .node-main-login .main .main-right #maincontent .container .cbi-map .cbi-section .cbi-section-node .cbi-value .cbi-value-field {
-        width: 16rem;
-    }
-
-    .node-main-login footer {
+    .login-page footer {
         display: none;
     }
 
